# technoprompt

./: README.md
sonic-voice-conductor/: .gitignore  README.md  config.example.yaml  pyproject.toml
sonic-voice-conductor/docs/: macros.md  profiles.md  sonic_pi_receiver.rb  voice_commands.md
sonic-voice-conductor/src/svc/: __init__.py  config.py  main.py
sonic-voice-conductor/src/svc/audio/: __init__.py  devices.py  recorder.py
sonic-voice-conductor/src/svc/intent/: __init__.py  knn_store.py  parser.py  rules.py  schema.py
sonic-voice-conductor/src/svc/llm/: __init__.py  ollama_client.py  prompts.py
sonic-voice-conductor/src/svc/macros/: __init__.py  engine.py  registry.py
sonic-voice-conductor/src/svc/memory/: __init__.py  db.py  events.py  ratings.py
sonic-voice-conductor/src/svc/osc/: __init__.py  client.py  protocol.py
sonic-voice-conductor/src/svc/profiles/: __init__.py  profiles.py
sonic-voice-conductor/src/svc/scheduler/: __init__.py  scheduler.py
sonic-voice-conductor/src/svc/stt/: __init__.py  whisper_stt.py
sonic-voice-conductor/src/svc/ui/: __init__.py  tui.py
sonic-voice-conductor/tests/: test_intent_normalize.py  test_knn_match.py  test_llm_json_extract.py  test_profiles_constraints.py  test_scheduler.py
